...
  Widget build(BuildContext context) {
    return Column(children: [
      Row(
        mainAxisAlignment: MainAxisAlignment.spaceAround,
        children: [
          ElevatedButton(
            child: Text("Fecha"),
            onPressed: _showDatePicker,
          ),
          ElevatedButton(onPressed: _showTimePicker, child: Text("Hora")),
        ],
      ),
      Row(
        mainAxisAlignment: MainAxisAlignment.spaceAround,
        children: [
          Text(
...
