...
            SizedBox(
              width: 120,
              child: TextField(
                maxLength: 2,
                controller: _slotsController,
                keyboardType: TextInputType.number,
                decoration: InputDecoration(labelText: 'Número de cupos'),
                onChanged: _updateSlots,
              ),
            ),
            SizedBox(
              width: 120,
              child: TextField(
                maxLength: 2,
                controller: _totalPlayersController,
                keyboardType: TextInputType.number,
                decoration: InputDecoration(labelText: 'Jugadores totales'),
                onChanged: _updateTotalPlayers,
              ),
            ),
          ],
        ),
        if (_errorMessage != null)
...
